# LuaVox

./: .gitignore  .gitmodules  CMakeLists.txt  gmon.out  imgui.ini  log.raw
Cache/: db.sqlite3
Libs/: TOS Lib
Libs/TOS Lib/: .gitignore  CMakeLists.txt
Libs/TOS Lib/Src/: TOSAsync.hpp  TOSLib.hpp  TOS_PSQL.hpp
Libs/png++/png++/: config.hpp  convert_color_space.hpp  error.hpp
Src/: TOSAsync.hpp  TOSLib.cpp  TOSLib.hpp  assets.cpp  assets.hpp  assets.py  main.cpp
Src/Client/: Abstract.cpp  Abstract.hpp  AssetsCacheManager.cpp  AssetsCacheManager.hpp  AssetsHeaderCodec.cpp  AssetsHeaderCodec.hpp  AssetsManager.cpp  AssetsManager.hpp  FrustumCull.h  ResourceCache.cpp  ResourceCache.hpp  ServerSession.cpp  ServerSession.hpp
Src/Client/Vulkan/: Abstract.hpp  VertexPool.hpp  VkSymbols.cpp  Vulkan.cpp  Vulkan.hpp  VulkanRenderSession.cpp  VulkanRenderSession.hpp
Src/Client/Vulkan/AtlasPipeline/: PipelinedTextureAtlas.cpp  PipelinedTextureAtlas.hpp  SharedStagingBuffer.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TexturePipelineProgram.hpp
Src/Common/: Abstract.cpp  Abstract.hpp  AssetsPreloader.cpp  AssetsPreloader.hpp  Async.hpp  Collide.hpp  IdProvider.hpp  Lockable.hpp  MemoryPool.hpp  Net.cpp  Net.hpp  Net2.cpp  Net2.hpp  Packets.hpp  TexturePipelineProgram.cpp  TexturePipelineProgram.hpp
Src/Server/: Abstract.cpp  Abstract.hpp  AssetsManager.cpp  AssetsManager.hpp  BinaryResourceManager.cpp  BinaryResourceManager.hpp  ContentEventController.cpp  ContentEventController.cpp_  ContentEventController.hpp  ContentManager.cpp  ContentManager.hpp  GameServer.cpp  GameServer.hpp  NodeDefManager.hpp  RemoteClient.cpp  RemoteClient.hpp  SaveBackend.cpp  SaveBackend.hpp  World.cpp  World.hpp
Src/Server/SaveBackends/: Filesystem.cpp  Filesystem.hpp
Work/: imgui.ini
Work/assets/shaders/: compile.sh
Work/assets/shaders/chunk/: node_opaque.frag
assets/shaders/chunk/: node.geom  node.vert  node_opaque.frag  node_transparent.frag  voxel.geom  voxel.vert  voxel_opaque.frag  voxel_transparent.frag
docs/: assets_definitions.md  assets_manager.md  resources.md  texture_pipeline.md
mods/test/: init.lua  mod.json
mods/test/assets/test/model/node/: acacia_planks.json  frame.json  grass.json  jungle_planks.json  oak_planks.json  tropical_rainforest_wood.json  willow_wood.json  xnether_blue_wood.json  xnether_purple_wood.json
mods/test/assets/test/nodestate/: test0.json  test1.json  test2.json  test3.json  test4.json  test5.json
